CPG-DEV/src/objects/CompetitorPerformanceTrendRange__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>DOWN_Range__c</fullName>
        <label>DOWN Range</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLAT_Range__c</fullName>
        <label>FLAT  Range</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UP_Range__c</fullName>
        <label>UP Range</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Competitor Performance Trend Range</label>
</CustomObject>